[package]
name = "anki-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
axum = "0.7.6"
tower = { version = "0.5.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["timeout", "trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7.7", features = ["with-chrono-0_4", "array-impls", "with-serde_json-1"] }
serde_json = "1"
chrono = "0.4"
futures = "0.3"
async-recursion = "1.0.0"
flate2 = "1.0.25"
base64 = "0.22.1"
regex = "1.5.4"
bb8-postgres = "0.8.1"
once_cell = "1.17.1"
sentry = "0.34.0"
axum-client-ip = "0.6.0"
rust-argon2 = "2.1"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[global.features]
client_ip = ["trust"]
